Tina | Dummy react component added
-Webpack configured

--- a/package.json
+++ b/package.json
@@ -15,5 +15,18 @@
   "bugs": {
     "url": "https://gitlab.com/ExpenseManager/front-end/issues"
   },
-  "homepage": "https://gitlab.com/ExpenseManager/front-end#README"
+  "homepage": "https://gitlab.com/ExpenseManager/front-end#README",
+  "dependencies": {
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-redux": "^5.0.6"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "html-webpack-plugin": "^2.30.1",
+    "webpack": "^3.5.5"
+  }
 }
