Tina | Use react-bootstrap

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://gitlab.com/ExpenseManager/front-end#README",
   "dependencies": {
     "react": "^15.6.1",
+    "react-bootstrap": "^0.31.2",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2"
