--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,5 @@
 {
-  "presets" : ["es2015", "react"]
-}
+  "presets" : ["es2015", "react"],
+  "plugins": [
+    ["lodash", { "id": ["lodash", "semantic-ui-react"] }]
+  ]}
