--- a/package.json
+++ b/package.json
@@ -18,18 +18,19 @@
   },
   "homepage": "https://gitlab.com/ExpenseManager/front-end#README",
   "dependencies": {
+    "babel-plugin-lodash": "^3.2.11",
+    "lodash": "^4.17.4",
     "react": "^15.6.1",
-    "react-bootstrap": "^0.31.2",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "semantic-ui-react": "^0.73.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "css-loader": "^0.28.5",
     "html-webpack-plugin": "^2.30.1",
     "react-bootstrap-table": "^4.0.2",
     "style-loader": "^0.18.2",
